2006-10-22  Akim Demaille  <akim.demaille@free.fr>

	Let svn-externals support short options
	* svn-externals: Add support -U.

2006-10-21  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix typos.

	* README,
	* urbi-openr.m4,
	* umake.in: Typos.

2006-10-21  Akim Demaille  <akim.demaille@free.fr>

	Upgrades
	* urbi-prog-cxx.m4: Define PARSER_CXXFLAGS, although I don't
	know yet how to use this cleanly, since -O2 is actually included
	in the CXXFLAGS, and they appear last...
	* version.hh.in (PACKAGE_VERSION_REV): New.
	* urbi-openr.m4: Minor simplification.

2006-10-21  Akim Demaille  <akim.demaille@free.fr>

	Minor completion
	* urbi-openr.m4: Complete doc and fix spelling.

2006-10-20  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Handle Qt3.

	* autotroll.m4: Take QT_DIR into account. If the build fail, it might
          be because QObject was introduced in Qt4. In this case, try again
          with #include <qobject.h> instead. Depending on this test,
          QT_VERSION_MAJOR is set to 3 or 4 and AC_SUBST'ed. This is not a
          reliable way of knowing the real version of Qt though.

2006-10-18  Akim Demaille  <demaille@gostai.com>

	More for Aibo.
	* urbi-dirs.m4: Define URBI_ENV_<ENV>.
	* urbi-openr.m4 (MKBIN, MK_FLAGS, STUBGEN, OPEN_R_CPPFLAGS):
	AC_SUBST them.

2006-10-18  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	Fix typos.

	* autotroll.m4: Fix typos (thanks aspell).

2006-10-18  SIGOURE Benoit  <sigoure.benoit@lrde.epita.fr>

	r64: Enhance AT_WITH_QT.

	* autotroll.m4 (AT_WITH_QT): Take 3 arguments to tweak the build
          process of Qt apps.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	pthreads or windows are not required.
	* urbi-pthread.m4: Don't require one of the two: aibo for instance.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	More doc.
	* README: More doc.
	* build-aux.mk (recheck): Run make.

2006-10-17  Akim Demaille  <demaille@gostai.com>

	recheck.
	* build-aux.mk (recheck): New.
